[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/MainMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Mouse.gd" type="Script" id=4]
[ext_resource path="res://Resources/SFX/House In a Forest Loop.ogg" type="AudioStream" id=5]

[sub_resource type="Environment" id=1]
background_mode = 4
glow_enabled = true

[sub_resource type="CanvasItemMaterial" id=2]
light_mode = 1

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=9]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
angular_velocity = 180.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 5.0
scale_random = 1.0
scale_curve = SubResource( 9 )

[sub_resource type="GDScript" id=6]
script/source = "extends Particles2D


func _ready():
	randomize()

func _physics_process(delta):
	position = Vector2(rand_range(0, get_viewport_rect().size.x), rand_range(0, get_viewport_rect().size.y))
"

[sub_resource type="CircleShape2D" id=7]
radius = 13.7708

[sub_resource type="CanvasItemMaterial" id=8]
light_mode = 1

[node name="Main" type="Node"]
script = ExtResource( 2 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0.188235, 0.164706, 0.454902, 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1024.0
margin_top = -600.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 9
color = Color( 0.0313726, 0.0196078, 0.172549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Stars" type="Particles2D" parent="."]
modulate = Color( 10, 10, 10, 1 )
material = SubResource( 2 )
position = Vector2( 87.9446, -40.5206 )
amount = 16
lifetime = 0.8
local_coords = false
process_material = SubResource( 5 )
script = SubResource( 6 )

[node name="Scene" type="Node" parent="."]

[node name="MainMenu" parent="Scene" instance=ExtResource( 1 )]

[node name="Mouse" type="Node2D" parent="."]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="Mouse"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mouse/Area2D"]
shape = SubResource( 7 )

[node name="Sprite" type="Sprite" parent="Mouse"]
modulate = Color( 2, 2, 2, 1 )
material = SubResource( 8 )

[node name="Node2D" type="Node2D" parent="Mouse"]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -30.0
autoplay = true

[connection signal="Start_Game" from="Scene/MainMenu" to="." method="_on_MainMenu_Start_Game"]
[connection signal="area_entered" from="Mouse/Area2D" to="." method="_on_Area2D_area_entered"]
